# mediashelf

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker-publish.yml
app/: accounts.py  api.py  db.py  main.py  models.py  pricing.py  secrets.py  seed.py  settings_store.py
app/connectors/: apple_music.py  base.py  deeplink_only.py  spotify.py  youtube.py
app/providers/: apple.py  omdb.py  spotify.py  tmdb.py  ytdlp_meta.py
app/services/: backups.py  catalog.py  library.py  matching.py  migrate.py  playback.py  podcasts.py  resolve.py  search.py  studio_home.py
app/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
app/web/public/: manifest.webmanifest  sw.js
app/web/scripts/: gen-icons.mjs
app/web/src/: App.tsx  index.css  main.tsx  tokens.css
app/web/src/components/: AvailabilityRow.tsx  Badge.tsx  BecauseRail.tsx  ConnectionCard.tsx  DiscoveryCard.tsx  EmptyState.tsx  FilterChips.tsx  GenreSelect.tsx  GlobalLoadingBar.tsx  KeyValueMono.tsx  Logo.tsx  LuckyDice.tsx  MatchCard.tsx  (+19 more)
docker/: Dockerfile  compose.prod.yaml  compose.yaml
docs/: INSTALL.md
tests/: conftest.py  test_apple_music.py  test_backups.py  test_catalog.py  test_custom_services.py  test_discovery.py  test_failure_modes.py  test_lucky.py  test_m3_accounts.py  test_matching.py  test_migrate.py  test_podcasts.py  test_ratings.py  test_regions.py  test_review_queue.py  test_search.py  test_service_merge.py  test_services.py  test_settings.py  test_watchlist_and_dedupe.py  test_ytdlp.py
(+22 files in other folders)
